# Topcoder

./: .gitignore  Dockerfile  README.md  STEP1.md  TODO.md  entrypoint.sh  guardrails.py  install-cli.py  publish_cli.py  pyproject.toml  railway.json  start.sh
.github/workflows/: guardrails.yml  publish-cli.yml
.guardrails/: config.yml
backend/: .env.example  ai_review.py  audit_log.py  autofix.py  coding_standards.py  config_loader.py  dashboard.py  guidelines.py  license_ip.py  main.py  policy.py  requirements.txt  rule_engine.py  scan_repo.py  scan_results.json  security_rules.py  settings_store.py  static_analysis.py
backend/rulepacks/: finance.yml  government.yml  healthcare.yml  public_sector.yml  telecom.yml
backend/tests/: test_api.py  test_coding_standards.py  test_dashboard.py  test_license_ip.py  test_security_rules.py
docs/: architecture.md  dashboard.md
github-app/: Dockerfile  Dockerfile.action  action.ts  action.yml  index.ts  package-lock.json  package.json  tsconfig.json
github-app/test/: github-app.test.ts
src/guardrails_cli/: autofix.py  cli.py  scan_repo.py  settings_store.py
src/guardrails_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
